# festival-schedule

./: .prettierrc.json  LICENCE.md  eslint.config.js  index.html  main.css  package-lock.json  package.json  schedule.json  scripts.js
.github/actions/upload-to-deds-action/: Dockerfile  action.yml  upload.sh
.github/workflows/: build-lint.yml  upload-to-deds.yml
schedules/: bks2024.json  dtrh2025.json
scripts/: .gitignore  parse_dtrh2025.py  pyproject.toml  scaffold_bks2026.py
src/: main.css  main.ts
src/lib/: app.ts  block-schedule.ts  config.ts  dom.ts  index.ts  schedule.ts  stage-schedule.ts
