[project]
name = "festival-schedule-scripts"
version = "0.1.0"
description = "Festival schedule related scripts"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.9",
    "types-requests>=2.32.0.20250328",
]
